syntax = "proto3";

package jailbird.common;

option java_multiple_files = true;
option java_package = "com.jailbird.common";
option java_outer_classname = "HealthProtos";

// Health check service for all skills
service HealthService {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
    rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message HealthCheckRequest {
    string service = 1;
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
        SERVICE_UNKNOWN = 3;
    }
    ServingStatus status = 1;
    string message = 2;
    int64 timestamp = 3;
    map<string, string> metadata = 4;
}